# webscraper

./: .gitignore  README.md  actions.py  actionsnode.py  chromemachine.py  config-data.json  config-data2.json  config.py  configuration-scheme.json  firefoxmachine.py  htmlparsing.py  machine.py  main.py  page.py  proxdownload.py  pyproject.toml  requirements.txt  results.csv  run.txt  setup.cfg  setup.py  start.py  timeout.py  tree.py  urlutils.py  validatejson.py  virtualbrowser.py  webparsing.py  webscraper.py
src/models/ingredients/: config.cfg  model.py
src/recipes/: recipes.json
src/recipes/recipes/: delish.json  settings.py
src/recipes/recipes/spiders/: allrecipes_sitemap_spider.py  allrecipes_spider.py  delish_spider.py
src/tmu/: inout.py  links.py  models.py  numbers.py  parsing.py  tableparser.py  udparser.py
src/webscraper/: actions.py  config.py  entry.py  firefoxmachine.py  htmlparsing.py  machine.py  main.py  page.py  parser.py  tree.py  urlutils.py  webscraper.py
src/webscraper.egg-info/: PKG-INFO  SOURCES.txt
src/webscraper/tree/: tree.py  tree_iter.py
tests/: test_firefoxmachine.py  test_links.py  test_models.py  test_parser.py  test_parsing.py  test_tableparser.py  test_tree.py  test_udparser.py  test_urlutils.py
tests/data/: ingredients.csv  recipes-links.txt
tests/data/html-rawdata/: 1  10  100  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  33  34  35  36  37  38  39  4  40  41  42  43  44  (+60 more)
