[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webscraper"
description = "Thieves tools for twenty gold pieces"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "selenium",
    "bs4",
    "fake-useragent",
    "webdriver-manager"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
