[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[project]
name = "webscraper"
description = "Thieves tools for twenty gold pieces"
version = "0.0.1"
requires-python = ">=3.9.4"
dependencies = [
    "selenium",
    "bs4",
    "fake-useragent",
    "webdriver-manager",
    "pytest",
    "ultimate-sitemap-parser"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
